--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<PackageProjectUrl>https://github.com/tylerjensen/ServiceWire</PackageProjectUrl>
 		<PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
-		<Authors>Tyler Jensen</Authors>
+		<Authors>Kenneth Carter; Tyler Jensen</Authors>
 		<PackageTags>WCF;Services;Host;Client;NamedPipes;TCP;Messaging;Serialization;</PackageTags>
 		<RepositoryUrl>https://github.com/tylerjensen/ServiceWire</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
