--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
     env:
+      working-directory: ./src
       VERSION: 5.4.0-preview.1
 
     steps:
@@ -29,7 +30,7 @@ jobs:
       run: |
         rsync -a ${DOTNET_ROOT/3.1.302/2.1.809}/* $DOTNET_ROOT/
     - name: Install dependencies
-      run:  src/dotnet restore 
+      run:  dotnet restore 
     - name: Build
       run: dotnet build src/serviceWire.sln --configuration Release --no-restore
     - name: Testing
