--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
         rsync -a ${DOTNET_ROOT/3.1.302/2.1.809}/* $DOTNET_ROOT/
     - name: Install dependencies
       run:  dotnet restore 
+      working-directory: ${{env.working-directory}}
     - name: Build
-      run: dotnet build src/serviceWire.sln --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore
+      working-directory: ${{env.working-directory}}
     - name: Testing
       run: dotnet test
