--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -11,6 +11,6 @@
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Nerdbank.GitVersioning" Version="3.2.31" PrivateAssets="all" />
+		<!--<PackageReference Include="Nerdbank.GitVersioning" Version="3.2.31" PrivateAssets="all" />-->
 	</ItemGroup>
 </Project>
