--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,4 @@ jobs:
       working-directory: ${{env.working-directory}}
     - name: Testing
       run: dotnet test
+      working-directory: ${{env.working-directory}}
