--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,9 +2,9 @@
 	<PropertyGroup>
 		<PackageProjectUrl>https://github.com/tylerjensen/ServiceWire</PackageProjectUrl>
 		<PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
-		<Authors>Kenneth Carter; Tyler Jensen</Authors>
+		<Authors>Tyler Jensen</Authors>
 		<PackageTags>WCF;Services;Host;Client;NamedPipes;TCP;Messaging;Serialization;</PackageTags>
-		<RepositoryUrl>https://github.com/tylerjensen/ServiceWire</RepositoryUrl>
+		<RepositoryUrl>https://github.com/SubSonic-Core/SubSonic.Core.ServiceWire</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageOutputPath>$(MSBuildThisFileDirectory)\packages\$(Configuration)</PackageOutputPath>
 		<IncludeSymbols>true</IncludeSymbols>
