--- a/src/ServiceWire/ServiceWire.csproj
+++ b/src/ServiceWire/ServiceWire.csproj
@@ -9,20 +9,21 @@
 
   <PropertyGroup>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Authors>Tyler Jensen</Authors>
-    <Company />
-    <PackageIconUrl>http://www.tsjensen.com/blog/image.axd?picture=2014/11/swlogo_sm.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/tylerjensen/ServiceWire</PackageProjectUrl>
+    <Authors>Tyler Jensen; Kenneth Carter</Authors>
+    <Company>SubSonic Core</Company>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
     <Copyright>Tyler Jensen 2013-2020</Copyright>
     <Version>5.3.4</Version>
-    <Description>ServiceWire is a very fast and light weight service host and dynamic client library that simplifies the development and use of high performance remote procedure call (RPC) communication between .NET processes over Named Pipes or TCP/IP. And with the release of 2.0.0, ServiceWire now supports optional use of Zero Knowledge authentication with a fast variation of Secure Remote Password Protocol and strong Rijndael encryption of data across the wire via TCP without the need for public keys going across the wire.</Description>
+    <Description>ServiceWire is a very fast and light weight service host and dynamic client library that simplifies the development and use of high performance remote procedure call (RPC) communication between .NET processes over Named Pipes or TCP/IP. And with the release of 2.0.0, ServiceWire now supports optional use of Zero Knowledge authentication with a fast variation of Secure Remote Password Protocol and strong Rijndael encryption of data across the wire via TCP without the need for public keys going across the wire.
+
+project fork of service wire</Description>
     <PackageTags>WCF Services Host Client NamedPipes TCP Messaging RPC Interception Zero Knowledge Secure Remote Password Protocol Serialization</PackageTags>
-    <PackageReleaseNotes>Support for .NET Framework to .NET Core core parameter types to eliminate exceptions when a Framework client is talking to a Core host or vice versa. Serializer injection bug fixed.</PackageReleaseNotes>
+    <PackageReleaseNotes>Uri types are mapping between framework and netcore and strong naming</PackageReleaseNotes>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>ServiceWire.snk</AssemblyOriginatorKeyFile>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageId>SubSonic.Core.ServiceWire</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
