--- a/src/Tests/Unit/ServiceWireTests/ServiceWireTests.csproj
+++ b/src/Tests/Unit/ServiceWireTests/ServiceWireTests.csproj
@@ -2,10 +2,10 @@
 
   <!-- ** Tests by OS targets only on LTS releases. -->
   <PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' "> 
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net462</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
